# backend/openapi.json
@@ -135,6 +135,9 @@
                     },
                     {
                       "$ref": "#/components/schemas/AiResponseMessage"
+                    },
+                    {
+                      "$ref": "#/components/schemas/OutputResponseMessage"
                     }
                   ],
                   "title": "Response Chat Chat Post"
@@ -161,7 +164,14 @@
       "AiResponseMessage": {
         "properties": {
           "content": {
-            "type": "string",
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
             "title": "Content"
           },
           "thread_id": {
@@ -365,7 +375,14 @@
       "GenerateBarChartMetadataResponseMessage": {
         "properties": {
           "content": {
-            "type": "string",
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
             "title": "Content"
           },
           "thread_id": {
@@ -423,7 +440,14 @@
       "GenerateTableResponseMessage": {
         "properties": {
           "content": {
-            "type": "string",
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
             "title": "Content"
           },
           "thread_id": {
@@ -518,6 +542,62 @@
         "title": "Item",
         "description": "A STAC item, with only the fields we need."
       },
+      "Output": {
+        "properties": {
+          "answer": {
+            "type": "string",
+            "title": "Answer"
+          },
+          "queries": {
+            "items": {
+              "type": "string"
+            },
+            "type": "array",
+            "title": "Queries"
+          }
+        },
+        "type": "object",
+        "required": [
+          "answer",
+          "queries"
+        ],
+        "title": "Output"
+      },
+      "OutputResponseMessage": {
+        "properties": {
+          "content": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Content"
+          },
+          "thread_id": {
+            "type": "string",
+            "title": "Thread Id"
+          },
+          "type": {
+            "type": "string",
+            "const": "output",
+            "title": "Type",
+            "default": "output"
+          },
+          "output": {
+            "$ref": "#/components/schemas/Output"
+          }
+        },
+        "type": "object",
+        "required": [
+          "thread_id",
+          "output"
+        ],
+        "title": "OutputResponseMessage",
+        "description": "The response from an output"
+      },
       "Properties": {
         "properties": {
           "description": {
@@ -557,7 +637,14 @@
       "SelectDatasetResponseMessage": {
         "properties": {
           "content": {
-            "type": "string",
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
             "title": "Content"
           },
           "thread_id": {
@@ -669,7 +756,14 @@
       "ToolResponseMessage": {
         "properties": {
           "content": {
-            "type": "string",
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
             "title": "Content"
           },
           "thread_id": {
